--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 =)
 
- <a href="intent://scan/#Intent;scheme=zxing;package=com.google.zxing.client.android;end"> Take a QR code </a>
+ <a href="intent://plugin/#Intent;scheme=disa;package=com.disa.sandbox;end"> Open in Disa </a>
