--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 =)
 
- <a href="intent://plugin/#Intent;scheme=disa;package=com.disa.sandbox;end"> Open in Disa </a>
+ <a href="intent://plugin/?x=wowomg#Intent;scheme=disa;package=com.disa.sandbox;end"> Open in Disa </a>
